@@ -1,3 +1,11 @@
+2010-10-26  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* src/core/termdata.cpp,
+	src/core/termdata.h,
+	src/core/termview.cpp: Using AttrType (short) to cast CTernCharAttr will
+	cause a problem in copy-text-with-color with DBCS words.
+	http://code.google.com/p/pcmanx-gtk2/issues/detail?id=20 by hrs113355
+
 2010-06-15  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
 	* build/make-new-release.sh: Polish script.
